fixed alignement of checkboxes in firefox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -110,6 +110,7 @@ textarea {
 .checkbox {
   input[type=checkbox] {
     margin-top: 2px;
+    width: 20px; // needed for firefox
   }
 }
 
